--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "start": "node ./server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,6 +29,8 @@
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "4.0.0"
+    "webpack-dev-middleware": "^7.2.1",
+    "webpack-dev-server": "4.0.0",
+    "webpack-hot-middleware": "^2.26.1"
   }
 }
