--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
